[gd_scene load_steps=16 format=3 uid="uid://c1qqxujrvquvy"]

[ext_resource type="Script" path="res://Scenes/GameScene/firstScene.gd" id="1_l8c6x"]
[ext_resource type="PackedScene" uid="uid://dq0mp8xmuh00" path="res://Scenes/MusicStaff/MusicStaff.tscn" id="2_sj7hj"]
[ext_resource type="Script" path="res://Scenes/LevelManager/LevelManager.gd" id="3_h6u58"]
[ext_resource type="Texture2D" uid="uid://corvs4jhdgfk3" path="res://RelunaIcons/backArrow.png" id="4_mrgby"]
[ext_resource type="Texture2D" uid="uid://dqg26wq4ious3" path="res://RelunaIcons/backArrowFocused.png" id="5_objsu"]
[ext_resource type="Texture2D" uid="uid://f7byr3m2so4i" path="res://RelunaIcons/play empty.png" id="6_qjtma"]
[ext_resource type="Texture2D" uid="uid://ikn1k8wp15am" path="res://RelunaIcons/playHighlighted.png" id="7_3mv0h"]
[ext_resource type="Script" path="res://Scenes/GameScene/PlayButton.gd" id="8_3d3gp"]
[ext_resource type="Texture2D" uid="uid://c8u1gdexyrdyn" path="res://RelunaIcons/checkEmpty.png" id="9_16myh"]
[ext_resource type="Texture2D" uid="uid://r001jll7cuxa" path="res://RelunaIcons/checkHighlighted.png" id="10_j7ihq"]
[ext_resource type="Script" path="res://Scenes/GameScene/CheckButton.gd" id="11_8m4k5"]
[ext_resource type="Texture2D" uid="uid://cxbfhp8by63gd" path="res://RelunaIcons/hint.png" id="12_stwnp"]
[ext_resource type="Texture2D" uid="uid://bojfpfwpd3vbg" path="res://RelunaIcons/hintHighlighted.png" id="13_t2esq"]
[ext_resource type="Script" path="res://Scenes/GameScene/Feedback.gd" id="14_2v74r"]
[ext_resource type="Script" path="res://Scenes/GameScene/DisplayText.gd" id="15_eekbl"]

[node name="Main" type="Node2D"]
script = ExtResource("1_l8c6x")

[node name="MusicStaff" parent="." instance=ExtResource("2_sj7hj")]
position = Vector2(80, 316)

[node name="LevelManager" type="Node2D" parent="." node_paths=PackedStringArray("musicStaff")]
position = Vector2(-1, 0)
script = ExtResource("3_h6u58")
numAccidentals = 2
bySharp = false
numNotes = 15
maxDetuneCents = 40
minDetuneCents = 30
lowestNote = "a3"
musicStaff = NodePath("../MusicStaff")
bpm = 500

[node name="ReturnButton" type="TextureButton" parent="."]
offset_left = 22.0
offset_top = 25.0
offset_right = 262.0
offset_bottom = 265.0
scale = Vector2(0.75, 0.75)
texture_normal = ExtResource("4_mrgby")
texture_hover = ExtResource("5_objsu")
texture_focused = ExtResource("5_objsu")

[node name="PlayButton" type="TextureButton" parent="."]
offset_left = 681.0
offset_top = 642.0
offset_right = 921.0
offset_bottom = 882.0
focus_neighbor_left = NodePath("../HintButton")
focus_neighbor_right = NodePath("../CheckButton")
texture_normal = ExtResource("6_qjtma")
texture_hover = ExtResource("7_3mv0h")
texture_focused = ExtResource("7_3mv0h")
script = ExtResource("8_3d3gp")

[node name="CheckButton" type="TextureButton" parent="."]
offset_left = 1115.0
offset_top = 735.0
offset_right = 1355.0
offset_bottom = 975.0
scale = Vector2(0.6, 0.6)
focus_neighbor_left = NodePath("../PlayButton")
texture_normal = ExtResource("9_16myh")
texture_hover = ExtResource("10_j7ihq")
texture_focused = ExtResource("10_j7ihq")
script = ExtResource("11_8m4k5")

[node name="HintButton" type="TextureButton" parent="."]
visible = false
offset_left = 308.0
offset_top = 654.0
offset_right = 548.0
offset_bottom = 894.0
scale = Vector2(0.637106, 0.637106)
focus_neighbor_right = NodePath("../PlayButton")
texture_normal = ExtResource("12_stwnp")
texture_hover = ExtResource("13_t2esq")
texture_focused = ExtResource("13_t2esq")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_right = 1600.0
offset_bottom = 900.0
color = Color(0.262745, 0.262745, 0.262745, 0.494118)

[node name="Feedback" type="Window" parent="."]
initial_position = 1
size = Vector2i(1300, 650)
visible = false
transient = true
exclusive = true
unresizable = true
borderless = true
content_scale_mode = 1
script = ExtResource("14_2v74r")

[node name="PanelContainer" type="PanelContainer" parent="Feedback"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
theme_type_variation = &"popupPanel"

[node name="CenterContainer" type="CenterContainer" parent="Feedback/PanelContainer"]
layout_mode = 2
focus_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Feedback/PanelContainer/CenterContainer"]
layout_mode = 2
focus_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Feedback/PanelContainer/CenterContainer/MarginContainer"]
layout_mode = 2
focus_mode = 2
alignment = 1

[node name="Correct" type="RichTextLabel" parent="Feedback/PanelContainer/CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"feedback"
theme_override_colors/default_color = Color(0, 0.639216, 0, 1)
bbcode_enabled = true
text = "[center]CORRECT"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Incorrect" type="RichTextLabel" parent="Feedback/PanelContainer/CenterContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_type_variation = &"feedback"
theme_override_colors/default_color = Color(1, 0, 0, 1)
bbcode_enabled = true
text = "[center]INCORRECT"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Attempts" type="RichTextLabel" parent="Feedback/PanelContainer/CenterContainer/MarginContainer/VBoxContainer"]
layout_direction = 2
layout_mode = 2
size_flags_vertical = 10
theme_override_colors/default_color = Color(0.305882, 0.305882, 0.305882, 1)
theme_override_font_sizes/normal_font_size = 60
bbcode_enabled = true
text = "[center]Attempts: 1"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="Feedback/PanelContainer/CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 2
theme_override_constants/separation = 700
alignment = 1

[node name="ReturnButton" type="Button" parent="Feedback/PanelContainer/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"popupButtons"
text = " return "
icon_alignment = 1

[node name="NextButton" type="Button" parent="Feedback/PanelContainer/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
theme_type_variation = &"popupButtons"
text = " next "

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_left = 15.0
offset_top = 52.0
offset_right = 1615.0
offset_bottom = 176.0
mouse_filter = 2

[node name="DisplayText" type="RichTextLabel" parent="CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
theme_override_colors/default_color = Color(0.305882, 0.305882, 0.305882, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_font_sizes/normal_font_size = 90
text = "select 1 out of tune note
"
fit_content = true
scroll_active = false
autowrap_mode = 0
script = ExtResource("15_eekbl")

[node name="ColorRect" type="ColorRect" parent="CenterContainer/DisplayText"]
visible = false
show_behind_parent = true
layout_mode = 0
offset_left = -175.0
offset_top = -12.0
offset_right = 1426.0
offset_bottom = 114.0
color = Color(1, 1, 1, 0.301961)

[connection signal="pressed" from="ReturnButton" to="LevelManager" method="_on_return_button_pressed"]
[connection signal="mouse_entered" from="PlayButton" to="PlayButton" method="_on_mouse_entered"]
[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="mouse_entered" from="CheckButton" to="CheckButton" method="_on_mouse_entered"]
[connection signal="pressed" from="CheckButton" to="LevelManager" method="checkPlayerInput"]
[connection signal="pressed" from="CheckButton" to="Feedback" method="_on_check_button_pressed"]
[connection signal="pressed" from="Feedback/PanelContainer/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer/ReturnButton" to="Feedback" method="_on_return_button_pressed"]
[connection signal="pressed" from="Feedback/PanelContainer/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer/NextButton" to="LevelManager" method="_reset"]
[connection signal="pressed" from="Feedback/PanelContainer/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer/NextButton" to="Feedback" method="_on_next_button_pressed"]
